Thu Oct 31 16:14:50 EST 2002	nsc <Nicholas_Castellano@acml.com>
	* configure.in:
	- Make the definition of _XOPEN_SOURCE_EXTENDED and _POSIX_C_SOURCE
	  conditional again (it causes problems on some systems).

Thu Oct 31 15:49:01 EST 2002	nsc <Nicholas_Castellano@acml.com>
	* src/dblib/unittests/Makefile.am:
	- Don't remove distributed files during "make clean".

Thu Oct 31 14:10:03 EST 2002	nsc <Nicholas_Castellano@acml.com>
	* configure.in:
	- Drop libd4r for hpux altogether.  These are DCE-compatible
	  functions, and don't behave like POSIX.

Thu Oct 31 13:54:23 EST 2002	nsc <Nicholas_Castellano@acml.com>
	* configure.in src/pool/main.c src/pool/member.c:
	- Unconditionally define _XOPEN_SOURCE_EXTENDED and _POSIX_C_SOURCE.
	- Extra includes for htons() and ntohs() on hpux.

Thu Oct 31 11:55:25 EST 2002	nsc <Nicholas_Castellano@acml.com>
	* configure.in:
	- Put libd4r in LIBS instead of NETWORK_LIBS.

Thu Oct 31 15:46:53 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* Makefile.am configure.in samples/Makefile.am:
	* src/ctlib/unittests/Makefile.am src/dblib/unittests/Makefile.am:
	* src/tds/unittests/Makefile.am:
	- make distcheck work again (define 
	  DISTCHECK_CONFIGURE_FLAGS='--enable-distcheck-build' before call
	  make)

Wed Oct 30 15:56:20 EST 2002	nsc <Nicholas_Castellano@acml.com>
	* doc/api_status.txt src/dblib/dblib.c:
	- Implement dbmnycmp(), dbmnycopy(), dbmnyzero(). (untested)

Wed Oct 30 15:27:41 EST 2002	nsc <Nicholas_Castellano@acml.com>
	* include/tds.h src/ctlib/unittests/t0006.c:
	- mnylow is unsigned.

Wed Oct 30 15:20:51 EST 2002	nsc <Nicholas_Castellano@acml.com>
	* src/dblib/bcp.c:
	- Eliminate a potential buffer overrun.  There's still
	  another one lurking here (colclause) that needs attention...

Wed Oct 30 14:35:40 EST 2002	nsc <Nicholas_Castellano@acml.com>
	* src/ctlib/ct.c:
	- Add a default case in outer loop of ct_results().  Paranoia.

Tue Oct 29 16:23:23 EST 2002	nsc <Nicholas_Castellano@acml.com>