@@ -1,4 +1,4 @@
-# version $Id: Makefile.am,v 1.23 2002-10-31 14:48:22 freddy77 Exp $
+# version $Id: Makefile.am,v 1.24 2002-11-01 09:58:07 freddy77 Exp $
 SUBDIRS		=	include src doc samples
 
 EXTRA_DIST	=	interfaces PWD.in BUGS \
@@ -16,6 +16,8 @@ install-data-local:
 		$(INSTALL_DATA) $(srcdir)/locales.conf $(ETC)/locales.conf; \
 	fi
 
+DISTCHECK_CONFIGURE_FLAGS	=	--enable-distcheck-build
+
 if DISTCHECK_BUILD
 uninstall-local:
 	$(RM) $(ETC)/freetds.conf $(ETC)/locales.conf $(ETC)/pool.conf PWD
@@ -25,6 +27,9 @@ test:
 	@echo "The 'make test' option has been replaced with 'make check'";
 
 all:
+if DISTCHECK_BUILD
+	if test ! -f PWD -a -f $(srcdir)/../PWD; then cp $(srcdir)/../PWD PWD; fi
+endif
 	if test ! -f PWD; then cp $(srcdir)/PWD.in PWD; fi
 
 snapshot:
