@@ -6,14 +6,13 @@ include_HEADERS	=	bkpublic.h cspublic.h cstypes.h ctlib.h ctpublic.h \
 			tds.h tdsconvert.h tdsodbc.h tdssrv.h tdsutil.h \
 			tdsver.h
 
-nodist_include_HEADERS	=	tds_sysdep_public.h
+nodist_include_HEADERS	=	tds_sysdep_public.h freetds_sysconfdir.h
 
 noinst_HEADERS	=	tds_configs.h \
 			tds_sysdep_private.h \
 			tdsiconv.h md4.h des.h \
 			replacements.h \
-			tdsstring.h \
-			freetds_sysconfdir.h
+			tdsstring.h
 
 DISTCLEANFILES	=	tds_sysdep_public.h freetds_sysconfdir.h
 
