@@ -18,14 +18,14 @@
 #include "common.h"
 #include "tdsutil.h"
 
-static char  software_version[]   = "$Id: t0013.c,v 1.8 2002-10-14 00:00:35 castellano Exp $";
+static char  software_version[]   = "$Id: t0013.c,v 1.9 2002-11-01 09:58:07 freddy77 Exp $";
 static void *no_unused_var_warn[] = {software_version,
                                      no_unused_var_warn};
 #define BLOB_BLOCK_SIZE 4096
 
 int failed = 0;
 
-char *testargs[] = { "", "data.bin", "t0013.out" };
+char *testargs[] = { "", FREETDS_SRCDIR "/data.bin", "t0013.out" };
 
 int main(int argc, char *argv[])
 {
