@@ -18,7 +18,7 @@
 #include "common.h"
 #include "tdsutil.h"
 
-static char  software_version[]   = "$Id: t0016.c,v 1.9 2002-10-14 00:00:35 castellano Exp $";
+static char  software_version[]   = "$Id: t0016.c,v 1.10 2002-11-01 09:58:07 freddy77 Exp $";
 static void *no_unused_var_warn[] = {software_version,
                                      no_unused_var_warn};
 int failed = 0;
@@ -32,7 +32,7 @@ int main(int argc, char *argv[])
    char			sqlCmd[256];
    RETCODE      ret;
    char         *out_file = "t0016.out";
-   char         *in_file = "t0016.in";
+   char         *in_file = FREETDS_SRCDIR "/t0016.in";
    char         *err_file = "t0016.err";
    DBINT        rows_copied;
    int          num_cols;
